committing pre entrega 2 v1

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,8 +1,18 @@
-li{
-    margin: 0.5rem;
-    cursor: pointer;
-}
 
 .logo{
     width: 4rem;
+}
+
+
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid black;
+}
+
+li {
+    display: inline-block;
+    margin: 1rem;
+    cursor: pointer;
 }
